<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/questionBG"
    tools:context=".Act_Question3">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        android:text="@string/q3q"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/q3"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/falseButton"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:background="@color/btncolor"
        android:text="@string/a_false"
        app:layout_constraintStart_toStartOf="@+id/trueButton"
        app:layout_constraintTop_toBottomOf="@+id/trueButton" />

    <Button
        android:id="@+id/trueButton"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@color/btncolor"
        android:text="@string/a_true"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>